--- a/chatapp/.env
+++ b/chatapp/.env
@@ -3,3 +3,16 @@ PORT=1337
 APP_KEYS=nAGdKGaIals7BiwywH5B2w==,rKX8e1Bw5FKjBp5rt2T+ow==,2jmQjVuW4malcOTyCRFjPg==,eOT7hd7YiFt+FvdYem349Q==
 JWT_SECRET=f613a119-c6ca-481e-9a55-bcbf3f5e222b
 API_TOKEN_SALT=d176a9de50a3c9e11cafc10bda4b42d9
+
+# @strapi-community/dockerize variables 
+
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_NAME=chatapp
+DATABASE_USERNAME=chatapp
+DATABASE_PASSWORD=chatapp
+NODE_ENV=development
+DATABASE_CLIENT=postgres
+# @strapi-community/dockerize end variables 
+
+ADMIN_JWT_SECRET =thisisajwtdummytoken
