--- a/chatapp/package.json
+++ b/chatapp/package.json
@@ -13,8 +13,12 @@
     "@strapi/plugin-i18n": "4.1.5",
     "@strapi/plugin-users-permissions": "4.1.5",
     "@strapi/strapi": "4.1.5",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.4",
+    "pg": "^8.11.3",
+    "sharp": "^0.32.5",
     "socket.io": "^4.5.1",
-    "sqlite3": "5.0.2"
+    "sqlite3": "^5.1.6"
   },
   "author": {
     "name": "A Strapi developer"
