--- a/next-chat/package.json
+++ b/next-chat/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "antd": "^4.20.5",
+    "font-awesome": "^4.7.0",
     "font-awesome.min.css": "^3.2.1",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.6",
