--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,39 @@ chatapp/node_modules
 next-chat/node_modules
 *.pack
 *.pack
+next-chat/.next/cache/webpack/server-development/index.pack.old
+next-chat/.next/cache/webpack/server-development/index.pack
+next-chat/.next/cache/webpack/server-development/9.pack
+next-chat/.next/cache/webpack/server-development/8.pack
+next-chat/.next/cache/webpack/server-development/7.pack
+next-chat/.next/cache/webpack/server-development/6.pack
+next-chat/.next/cache/webpack/server-development/5.pack
+next-chat/.next/cache/webpack/server-development/4.pack
+next-chat/.next/cache/webpack/server-development/2.pack
+next-chat/.next/cache/webpack/client-development/index.pack.old
+next-chat/.next/cache/webpack/client-development/index.pack
+next-chat/.next/cache/webpack/client-development/9.pack
+next-chat/.next/cache/webpack/client-development/5.pack
+next-chat/.next/cache/webpack/client-development/4.pack
+next-chat/.next/cache/webpack/client-development/3.pack
+next-chat/.next/cache/webpack/client-development/12.pack
+next-chat/.next/cache/webpack/client-development/11.pack
+next-chat/.next/cache/webpack/client-development/10.pack
+next-chat/.next/cache/webpack/server-development/index.pack.old
+next-chat/.next/cache/webpack/server-development/index.pack
+next-chat/.next/cache/webpack/server-development/9.pack
+next-chat/.next/cache/webpack/server-development/8.pack
+next-chat/.next/cache/webpack/server-development/7.pack
+next-chat/.next/cache/webpack/server-development/6.pack
+next-chat/.next/cache/webpack/server-development/5.pack
+next-chat/.next/cache/webpack/server-development/4.pack
+next-chat/.next/cache/webpack/server-development/2.pack
+next-chat/.next/cache/webpack/client-development/index.pack.old
+next-chat/.next/cache/webpack/client-development/index.pack
+next-chat/.next/cache/webpack/client-development/9.pack
+next-chat/.next/cache/webpack/client-development/5.pack
+next-chat/.next/cache/webpack/client-development/4.pack
+next-chat/.next/cache/webpack/client-development/3.pack
+next-chat/.next/cache/webpack/client-development/12.pack
+next-chat/.next/cache/webpack/client-development/11.pack
+next-chat/.next/cache/webpack/client-development/10.pack
